# orjson-ddb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yaml  linux-cross.yaml  linux.yaml  macos.yaml  manylinux2014.yaml  manylinux_2_28.yaml  musllinux.yaml  windows.yaml
bench/: benchmark_ddb_loads.py  data.py  ddb_data.py  requirements.txt
data/: ddb_vectors.json.xz
integration/: init  thread  typestubs.py  wsgi.py
pysrc/orjson_ddb/: __init__.py  boto_integration.py
python/orjson_ddb/: __init__.py  boto_integration.py
script/: lint
src/: lib.rs
src/deserialize/: yyjson.rs
test/: requirements.txt  test_api.py  test_append_newline.py  test_canonical.py  test_circular.py  test_dataclass.py  test_datetime.py  test_default.py  test_dict.py  test_enum.py  test_error.py  test_fixture.py  test_indent.py  test_issue221.py  test_jsonchecker.py  test_memory.py  test_non_str_keys.py  test_numpy.py  test_parsing.py  test_roundtrip.py  test_sort_keys.py  test_subclass.py  test_transform.py  test_type.py  test_typeddict.py  test_ujson.py  test_uuid.py  util.py
test/ddb/: test_boto_integration.py  test_loads.py
