[project]
name = "orjson_ddb"
repository = "https://github.com/MattFanto/orjson-ddb"

[build-system]
build-backend = "maturin"
requires = ["maturin>=0.13,<0.14"]

[tool.maturin]
sdist-include = ["build.rs", "Cargo.lock", "include/**/*"]
python-source = "python"
strip = true

[tool.black]
line-length = 88
target-version = ["py37"]
include = ".pyi?$"
